[project]
name = "unreal-http-bridge"
version = "0.1.0"
description = "Unreal HTTP Bridge: A web server for Unreal Engine integration via HTTP API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "uvicorn",
  "fastapi",
  "pydantic>=2.6.1",
  "requests",
  "anthropic>=0.59.0",
  "google-generativeai>=0.3.0",
  "pillow>=11.3.0",
  "google-genai>=1.38.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta" 
