[package]
name = "megamelange-desktop"
version = "1.0.0"
description = "MegaMelange - AI-Powered Creative Hub for Unreal Engine"
authors = ["MegaMelange Team"]
license = "MIT"
repository = "https://github.com/chongdashu/unreal-mcp"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
tauri = { version = "^2", features = [] }
tauri-plugin-shell = "^2"
tauri-plugin-store = "^2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
